--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14D72i" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
@@ -669,11 +669,11 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Socket_Prototype" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="233" height="54"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZEI-hf-jbt">
-                                <rect key="frame" x="130" y="118" width="80" height="32"/>
+                            <button horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ZEI-hf-jbt">
+                                <rect key="frame" x="2" y="10" width="80" height="32"/>
                                 <buttonCell key="cell" type="push" title="Server" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="T1I-wQ-Rs1">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -682,8 +682,18 @@
                                     <action selector="startServer:" target="XfG-lQ-9wD" id="3DX-Sl-y5p"/>
                                 </connections>
                             </button>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uvb-gR-4pz">
-                                <rect key="frame" x="275" y="118" width="76" height="32"/>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ioz-HA-qGG">
+                                <rect key="frame" x="78" y="10" width="81" height="32"/>
+                                <buttonCell key="cell" type="push" title="Sound" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Jx6-O1-G0f">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="playSound:" target="XfG-lQ-9wD" id="ITg-Ql-Aio"/>
+                                </connections>
+                            </button>
+                            <button horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Uvb-gR-4pz">
+                                <rect key="frame" x="155" y="10" width="76" height="32"/>
                                 <buttonCell key="cell" type="push" title="Client" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="CfW-Fj-GWX">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -693,11 +703,20 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="ZEI-hf-jbt" firstAttribute="baseline" secondItem="Uvb-gR-4pz" secondAttribute="baseline" id="1i8-ed-jGF"/>
+                            <constraint firstItem="ZEI-hf-jbt" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="8" id="8Bz-k9-60N"/>
+                            <constraint firstItem="ZEI-hf-jbt" firstAttribute="baseline" secondItem="ioz-HA-qGG" secondAttribute="baseline" id="BuW-Nd-Iq2"/>
+                            <constraint firstItem="ZEI-hf-jbt" firstAttribute="centerY" secondItem="m2S-Jp-Qdl" secondAttribute="centerY" id="IbF-C8-nky"/>
+                            <constraint firstItem="Uvb-gR-4pz" firstAttribute="leading" secondItem="ioz-HA-qGG" secondAttribute="trailing" constant="8" id="KyP-k3-NnN"/>
+                            <constraint firstAttribute="trailing" secondItem="Uvb-gR-4pz" secondAttribute="trailing" constant="8" id="V1o-5u-7Ek"/>
+                            <constraint firstItem="ioz-HA-qGG" firstAttribute="leading" secondItem="ZEI-hf-jbt" secondAttribute="trailing" constant="8" id="Vsp-9E-K5p"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="-48.5" y="547"/>
         </scene>
     </scenes>
 </document>
